# Minecraft-Clone

./: .gitignore  CMakeLists.txt  Minecraft-Clone.sln  README.md
Minecraft-Clone/: Minecraft-Clone.vcxproj  Minecraft-Clone.vcxproj.filters
Minecraft-Clone/assets/shaders/: basic_texture.vsh
Minecraft-Clone/include/: Block.h  Chunk.h  World.h
Minecraft-Clone/include/gfx/: Camera.h  VertexArray.h  VertexBufferLayout.h  Window.h
Minecraft-Clone/include/utils/: Color.h  Utils.h
Minecraft-Clone/src/: Chunk.cpp  Game.cpp
Minecraft-Clone/src/gfx/: Camera.cpp  IndexBuffer.cpp  Renderer.cpp  Texture.cpp  VertexArray.cpp  VertexBufferLayout.cpp  Window.cpp
Minecraft-Clone/src/glad/: glad.c
Minecraft-Clone/src/utils/: Timer.cpp
assets/shaders/: basic_texture.fsh  vertex.glsl
include/: Block.h  Camera.h  Chunk.h  Cube.h  CubeMesh.h  Game.h  Sprite.h  Transformable.h
include/gfx/: Camera.h  Drawable.h  IndexBuffer.h  OpenGL.h  Renderer.h  Shader.h  Texture.h  VertexBuffer.h  VertexBufferLayout.h  Window.h
include/utils/: Direction.h  Timer.h  Transformable.h  Utils.h  Vector2.h
src/: Block.cpp  Chunk.cpp  Cube.cpp  CubeMesh.cpp  Game.cpp  Main.cpp  Sprite.cpp  Transformable.cpp
src/gfx/: Camera.cpp  Drawable.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
src/utils/: Direction.cpp  Timer.cpp  Vector2.cpp
